# parallel-gs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  checkout_submodules.sh  comb_filter_test.m  generate_analog_filters.m  generate_ntsc_filters.m  pal_decomb_test.m
analog/: CMakeLists.txt  analog_video.cpp  analog_video.hpp  sandbox.cpp  slangmosh.sh
analog/octave/: comb_filter_test.m  generate_analog_filters.m  pal_decomb_test.m
analog/shaders/: blit.vert  bloom.frag  composite.comp  filters.h  iir.comp  scan.frag  sinc.frag  slangmosh.hpp  slangmosh.json  slangmosh_iface.hpp
dump/: CMakeLists.txt  gs_dump_generator.cpp  gs_dump_generator.hpp  gs_dump_parser.cpp  gs_dump_parser.hpp
gs/: CMakeLists.txt  gs_interface.cpp  gs_interface.hpp  gs_register_addr.hpp  gs_registers.hpp  gs_registers_debug.hpp  gs_renderer.cpp  gs_renderer.hpp  gs_util.cpp  gs_util.hpp  page_tracker.cpp  page_tracker.hpp  slangmosh.sh
gs/shaders/: binning.comp  blit_circuit.frag  clut_write.comp  data_buffers.h  data_structures.h  extwrite.comp  intersect.h  math_utils.h  quad.vert  qword_clear.comp  sample_circuit.frag  sampler_feedback.comp  single_sample_heuristic.comp  slangmosh.hpp  slangmosh.json  slangmosh_iface.hpp  swizzle_utils.h  triangle_setup.comp  ubershader.comp  ui.frag  ui.vert  upload.comp  utils.h  vram_copy.comp  weave.frag
gs/shaders/deinterlace/: luminance_pyramid.comp  motion_filter.comp  motion_search.comp  motion_search_qpel.comp  motion_upscale.comp  weave.frag
misc/: 0001-Add-an-ad-hoc-GS-stream-format.patch
misc/arch-pkgbuild-pcsx2/: 0001-Add-an-ad-hoc-GS-stream-format.patch  0001-Early-integration-of-parallel-GS.patch  0002-Add-new-analog-video-options.patch  0002-Early-integration-of-parallel-GS.patch  0003-Handle-AutomaticBFF-cases.patch  0003-Hook-up-ImGui-UI-support.patch  0004-Hook-up-GSreset.patch  PKGBUILD  pcsx2-git.install  pcsx2-qt.sh
sandbox/: CMakeLists.txt  gs_test.cpp  motion_estimation.cpp
sandbox/assets/: luminance-pyramid.comp  motion-filter.comp  motion-fuse.comp  motion-search-qpel.comp  motion-search.comp  motion-upscale.comp  motion-weave.comp
scripts/: build-steamrt-inside.sh  build-steamrt.sh
tools/: CMakeLists.txt  gs_dump_replayer.cpp  gs_repro_replayer.cpp  gs_stream_replayer.cpp
tools/assets/: blit.frag  bloom.frag  composite.comp  encode.frag  filters.h  scan.frag  sinc.frag
